Minify inline JavaScript

--- a/index.html
+++ b/index.html
@@ -53,12 +53,7 @@
 			<p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
 		</footer>
 	</body>
-	<script>
-		(function(w,g){w['GoogleAnalyticsObject']=g;
-		w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
-		ga('create', 'UA-19132466-7');
-		ga('send', 'pageview');
-	</script>
+	<script>!function(e,n){e.GoogleAnalyticsObject=n,e[n]=e[n]||function(){(e[n].q=e[n].q||[]).push(arguments)},e[n].l=1*new Date}(window,"ga"),ga("create","UA-19132466-7"),ga("send","pageview");</script>
 	<script async src="http://www.google-analytics.com/analytics.js"></script>
 	<script async src="js/perfmatters.js"></script>
 </html>
